--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             </nav>
             <button class="Account">Create Account</button>
             <button class="Account">Sign In</button>
+            <div class="hamburger"><img src="./images/Hamburger.png"width="50px"height="50px"></div>
         </div>
     </header>
     <main>
@@ -74,7 +75,7 @@
                     <form>
                         <label for="To">To</label>
                         <select id="location" name="fromlocation">
-                            <option value="volvo">Select a destination</option>
+                            <option value="volvo">Select a place</option>
                              <option value="Lagos">Lagos</option>
                             <option value="Abeokuta">Abeokuta</option>
                             <option value="Makurdi">Makurdi</option>
