redesigned nigeria railway corporation page

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             
             <div class="form-1">
                 <form>
-                    <label for ="From">From</form>
+                    <label for ="From">From:</form>
                     <select id="location" name="fromlocation">
                         <option value="">Select a source</option>
                          <option value="Lagos">Lagos</option>
@@ -73,7 +73,7 @@
                 </form>
                 <div class="form-2">
                     <form>
-                        <label for="To">To</label>
+                        <label for="To">To:</label>
                         <select id="location" name="fromlocation">
                             <option value="volvo">Select a place</option>
                              <option value="Lagos">Lagos</option>
@@ -95,7 +95,7 @@
                         </select>
                     </form>
                     <form>
-                        <label for="Date">Date</label>
+                        <label for="Date">Date:</label><br>
                         <input type="Date">
                     </form>
                      <form>
@@ -117,7 +117,7 @@
 
             </div>
             <div class="item-2">
-                <div class="face"><img src="./images/face mask.JPG" width="280px"height="140px"></div>
+                <div class="face"><img src="./images/face_mask.JPG" width="280px"height="140px"></div>
                 <div class="changes"><h3 class="fff">FACE COVERING </h3></div>
                  <div class="changes"><p>Face coverings is mandatory.</p></div>
                  <div class="more"><button class="btny">Find out more</button></div>
