redesigned nigeria railway page

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                             <option value="Zaria">Zaria</option> 
                         </select>
                     </form>
-                    <form>
-                        <label for="Date">Date:</label><br>
+                    <form class="Date">
+                        <label for="Date">Date:</label><span><br></span>
                         <input type="Date">
                     </form>
                      <form>
